# wechat-sticker-dingtalk

./: Cargo.toml
src/: dingtalk.rs  main.rs  util.rs  xml.rs
